--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,4 @@
-version 0.0.0.9 : (last updated 2015-09-14)
+version 0.99.0 :
     + Pre-Release Bioconductor
+version 1.0.0 : (last updated 12/05/2016)
+    + Updated onLoad function to work with the updated MgDb class definition in metagenomeFeatures version 1.5
